--- a/AUTHORS
+++ b/AUTHORS
@@ -2,5 +2,4 @@
 # to this repository. Add your name here
 # when you submit a pull request.
 
-Bezaleel Olakunori <bezaleeloci@gmail.com>
-OVECJOE <ovecjoe123@gmail.com>
+Noel Bekele <desalegnbekele2121@gmail.com>
